# Archimedes

./: .gitignore  COLLAB-PLAN.md  CRAFT.md  Cargo.toml  PLAN.md  PROMPT.md  README.md  Trunk.toml  archimedes-28f3aa406c229468.js  archimedes-3ed0aca481d7f6e3.js  archimedes-602b70012fed6ddd.js  archimedes-cd14b21dede995e2.js  archimedes-ebcd587af37dad4a.js  archimedes-ebcd587af37dad4a_bg.wasm  index.html
.github/workflows/: deploy.yml
crates/archimedes/: Cargo.toml  Trunk.toml
crates/archimedes/src/: app.rs
crates/archimedes/src/collab/: broadcast.rs  doc.rs  mod.rs  presence.rs  transport.rs  wire.rs  ws.rs
crates/archimedes/src/demos/: convex_hull.rs  robustness.rs
crates/archimedes/src/geometry/: mod.rs  power_diagram.rs  primitives.rs
crates/archimedes/src/ui/: point_editor.rs
crates/relay/: Cargo.toml  build.rs
crates/relay/src/: main.rs
docs/: collab-known-issues.md  concepts.md  papers.md  tonight.md
proto/: messages.proto
src/: app.rs  canvas.rs  main.rs  theme.rs
src/collab/: mod.rs
src/demos/: convex_hull.rs  critical_area.rs  delaunay_voronoi.rs  mod.rs  polygon_ops.rs  robustness.rs
src/ui/: mod.rs  point_editor.rs
