[package]
name = "archimedes"
version = "0.1.0"
edition = "2021"
description = "Interactive computational-geometry playground in Rust + WebAssembly"
license = "MIT OR Apache-2.0"

[dependencies]
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.30"
log = "0.4"
serde = { version = "1", features = ["derive"] }

spade = "2.12"
i_overlay = "1.9"
robust = "1.1"
web-time = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 2
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
