[package]
name = "archimedes"
version = "0.1.0"
edition = "2021"
description = "Interactive computational-geometry playground in Rust + WebAssembly"
license = "MIT OR Apache-2.0"

[dependencies]
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.30"
log = "0.4"
serde = { version = "1", features = ["derive"] }

spade = "2.12"
i_overlay = "1.9"
robust = "1.1"
web-time = "1.1"
yrs = "0.21"
uuid = { version = "1", features = ["v4", "js"] }
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams", "Storage"] }
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
